# slam_knowledge_base

./: .gitignore  .wiki-cache.json  .wiki-schema.md  AGENTS.md  CLAUDE.md  README.md  index.md  log.md  purpose.md
.beads/: interactions.jsonl  issues.jsonl  metadata.json
.beads/hooks/: pre-commit
.claude/: settings.json
.obsidian/: workspace.json
raw/articles/: 2026-04-27-gtsam-4.3a1-docs.md  2026-04-29-px4-imu-preprocessing.md
raw/codes/: MANIFEST.md
raw/codes/BEV-LSLAM/orb_lio/: CMakeLists.txt  package.xml
raw/codes/BEV-LSLAM/orb_lio/groundtruth/: Groundtruth.txt
raw/codes/BEV-LSLAM/orb_lio/include/orb_feature/: ORB_modify.hpp
raw/codes/BEV-LSLAM/orb_lio/include/orb_lio/: utility.h
raw/codes/BEV-LSLAM/orb_lio/launch/: orb_lo.launch
raw/codes/BEV-LSLAM/orb_lio/result/: pose.txt  pose_evo.txt  pose_evo_odometry.txt
raw/codes/BEV-LSLAM/orb_lio/rviz_cfg/: GR_fusion.rviz  feature.rviz  wsc1.rviz
raw/codes/BEV-LSLAM/orb_lio/src/: lidarFactor.hpp  scantomap_kitti.cpp  scantoscan_kitti.cpp
raw/codes/BEV-LSLAM/orb_lio/src/orb_feature/: ORB_modify.cc  ORBextractor.cc  gms_matcher.cc
raw/docs-comparison/: camera_pipeline_comparison.md
raw/docs-deep-dive/: ct_icp_analysis.md  esvo_analysis.md  fast_livo2_analysis.md  fusions_slam_analysis.md  genz_icp_analysis.md  gtsam_points_analysis.md  kiss_icp_analysis.md  lightning_lm_analysis.md  lio_sam_analysis.md  lt_mapper_analysis.md  lvi_sam_analysis.md  ob_gins_analysis.md  open_vins_analysis.md  orb_slam3_analysis.md  rolo_analysis.md  rovio_analysis.md  schurvins_analysis.md  slam_fusion_core_analysis.md  vins_fusion_analysis.md
raw/docs-top/: framework_comparison.md
raw/notes/: 2026-04-30-image-preprocessing-comparison.md  4d_radar_slam_analysis.md  bev_lslam_analysis.md  cartographer_analysis.md  ct_icp_analysis.md  dm_vio_analysis.md  droid_slam_analysis.md  dso_analysis.md  esvo_analysis.md  fast_lio_sam_analysis.md  fast_livo2_analysis.md  fusions_slam_analysis.md  genz_icp_analysis.md  gtsam_points_analysis.md  ic_gvins_analysis.md  kimera_vio_analysis.md  kiss_icp_analysis.md  lego_loam_analysis.md  lightning_lm_analysis.md  lio_sam_analysis.md  lt_mapper_analysis.md  lvi_sam_analysis.md  monogs_analysis.md  msckf_vio_analysis.md  nice_slam_analysis.md  (+14 more)
wiki/: overview.md
(+379 files in other folders)
